--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "start": "nodemon --exec babel-node -- src/run",
     "test": "export NODE_PATH=./ && mocha --compilers js:babel-register --recursive"
   },
-  "author": "",
+  "author": "Javier Rotelli",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/Javier-Rotelli/taperbot.git"
+  },
   "license": "ISC",
   "dependencies": {
     "babel-cli": "^6.22.2",
@@ -19,9 +23,11 @@
     "ws": "^0.7.2"
   },
   "devDependencies": {
+    "babel-plugin-istanbul": "^4.0.0",
     "babel-register": "^6.18.0",
     "chai": "^3.5.0",
     "mocha": "^2.4.5",
+    "nyc": "^10.1.2",
     "should": "^4.4.4"
   }
 }
