--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/run.js",
   "scripts": {
     "start": "nodemon --exec babel-node -- src/run",
-    "test": "export NODE_PATH=./ && mocha --compilers js:babel-register --recursive"
+    "test": "export NODE_PATH=./ && mocha --compilers js:babel-register --recursive",
+    "deploy": "shipit staging deploy"
   },
   "author": "Javier Rotelli",
   "repository": {
@@ -28,6 +29,10 @@
     "chai": "^3.5.0",
     "mocha": "^2.4.5",
     "nyc": "^10.1.2",
+    "shipit-cli": "^2.0.0",
+    "shipit-deploy": "^2.1.3",
+    "shipit-npm": "^0.2.0",
+    "shipit-pm2": "0.0.4",
     "should": "^4.4.4"
   }
 }
