--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "shipit-deploy": "^2.1.3",
     "shipit-npm": "^0.2.0",
     "shipit-pm2": "0.0.4",
+    "shipit-shared": "^4.4.2",
     "should": "^4.4.4"
   }
 }
