--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "babel-cli": "^6.22.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-2": "^6.18.0",
     "js-yaml": "^3.7.0",
@@ -39,5 +40,8 @@
     "shipit-shared": "^4.4.2",
     "should": "^4.4.4",
     "standard": "^8.6.0"
+  },
+  "optionalDependencies": {
+    "google-spreadsheet": "^2.0.3"
   }
 }
