--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-2": "^6.18.0",
+    "debug": "^2.6.3",
     "js-yaml": "^3.7.0",
     "nodemon": "^1.11.0",
     "request": "^2.57.0",
