--- a/config.yml.example
+++ b/config.yml.example
@@ -1,6 +1,6 @@
 apiToken: thisIsASecretToken
 userId: U3FTH76RZ
-debug: *
+debug: true
 ignoredChannels:
   - C02TUBDTJ #General
   - C052AP8CB #General-es
