--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "shipit-npm": "^0.2.0",
     "shipit-pm2": "0.0.4",
     "shipit-shared": "^4.4.2",
+    "shipit-yarn": "^0.2.0",
     "should": "^4.4.4",
     "sinon": "^2.1.0",
     "standard": "^8.6.0"
