--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "apisauce": "^0.14.0",
     "babel-cli": "^6.22.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.18.0",
