--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-preset-stage-2": "^6.18.0",
     "debug": "^2.6.3",
     "js-yaml": "^3.7.0",
+    "level": "^3.0.0",
     "nodemon": "^1.11.0",
     "request": "^2.57.0",
     "ws": "2.2.0"
