--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/run.js",
   "scripts": {
-    "start": "nodemon --exec babel-node -- src/run",
+    "start": "nodemon --exec babel-node --inspect -- src/run",
     "test": "export NODE_PATH=./ && mocha --compilers js:babel-register --recursive",
     "deploy": "shipit staging deploy",
     "lint": "standard; exit 0;",
