cambios para que no se pierda data al deployar. y cambios para que el servidor de desarrollo no se reinicie si se escribe en data

--- a/package.json
+++ b/package.json
@@ -17,6 +17,12 @@
     "url": "git://github.com/Javier-Rotelli/taperbot.git"
   },
   "license": "ISC",
+  "nodemonConfig": {
+    "ignore": [
+      "test/*",
+      "data/*"
+    ]
+  },
   "dependencies": {
     "apisauce": "^0.14.0",
     "babel-cli": "^6.22.2",
