--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "debug": "^2.6.3",
     "js-yaml": "^3.7.0",
     "nodemon": "^1.11.0",
+    "ramda": "^0.26.1",
     "request": "^2.57.0",
     "ws": "2.2.0"
   },
