--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "src/run.js",
   "scripts": {
+    "cli": "babel-node -- taperbot-cli",
     "start": "nodemon --exec babel-node -- src/run",
     "test": "export NODE_PATH=./ && mocha --compilers js:babel-register --recursive",
     "deploy": "shipit staging deploy",
@@ -29,6 +30,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-2": "^6.18.0",
+    "dayjs": "^1.11.1",
     "debug": "^2.6.3",
     "js-yaml": "^3.7.0",
     "nodemon": "^1.11.0",
