upgrade to yarn 3, upgrade dependencies, update README

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,12 @@ config.yml
 coverage/
 
 shipitfile.config.json
+
+# yarn
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
