--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     ]
   },
   "dependencies": {
+    "@slack/bolt": "^3.11.0",
     "apisauce": "^2.1.5",
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -42,8 +43,12 @@
     "babel-plugin-istanbul": "^6.1.1",
     "babel-register": "^6.26.0",
     "chai": "^4.3.6",
+    "eslint": "^8.15.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "mocha": "^10.0.0",
     "nyc": "^15.1.0",
+    "prettier": "^2.6.2",
     "shipit-cli": "^5.3.0",
     "shipit-deploy": "^5.3.0",
     "shipit-npm": "^0.2.0",
