Open AI pugin to anwser technical questions

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "debug": "^4.3.4",
     "js-yaml": "^4.1.0",
     "nodemon": "^2.0.16",
+    "openai": "^3.2.1",
     "ramda": "^0.28.0",
     "request": "^2.88.2",
     "ws": "8.6.0"
